# introduction-to-data-pipelines-and-apache-airflow

airflow/: docker-compose.yml  pyproject.toml
airflow/mnt/dags/: .airflowignore  day_3_dag.py  everyday_dag.py  weather_api_dag.py
airflow/mnt/logs/scheduler/: latest
airflow/weather/: pyproject.toml
airflow/weather/play_with_dbt/: dbt_project.yml  profile.yaml
airflow/weather/play_with_dbt/models/: average_temp_in_bankok.sql
airflow/weather/play_with_dbt/models/staging/: stg_weathers.sql
myfirst_project/: pyproject.toml
play_with_data_quality/: main.py  pyproject.toml
play_with_great_expectations/: data.csv  main.py  pyproject.toml
workspace/: docker-compose.yml  dogs.json  my_first_data_pipeline.py
workspace/mnt/dags/: dog_api_pipeline.py  weather_api_dag.py
workspace/mnt/logs/scheduler/: latest
