[tool.poetry]
name = "data-quality"
version = "0.1.0"
description = ""
authors = ["Tharathip Kulchotirat <83084032+tharathip-kulchotirat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
